fix: builder drag on mobile media

--- a/src/app/modules/builder/main/builder-list/builder-list.component.scss
+++ b/src/app/modules/builder/main/builder-list/builder-list.component.scss
@@ -8,7 +8,6 @@
   .sidebar-drawer,
   .wrapper {
     display: flex;
-    height: calc(100% - 55px);
     overflow-y: auto !important;
     overflow-x: hidden !important;
     .load {
